@@ -1,3 +1,7 @@
+2013-07-04  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #47810: Audio Captcha not working under IE 8
+
 2013-06-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #49272: Add support for mp3 audio captcha rendering
